--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
                 </div>
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
-                    <a class="btn btn-xl btn-outline-light" href="https://startbootstrap.com/theme/freelancer/">
-                        
+                    <a class="btn btn-xl btn-outline-light" href="https://github.com/anaju68/">
+                        Github
                     </a>
                 </div>
             </div>
